# em_lookahead_algorithm

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
doc/: EMPIRICAL_TEST_SPECIFICATIONS.md  IMPLEMENTATION_PROMPTS.md  QUICKSTART.md
lookahead_em_evaluation/: .Rhistory  .gitignore  DOCUMENTATION.md  README.md  __init__.py  environment.yml
lookahead_em_evaluation/algorithms/: __init__.py  gamma_schedule.py  lookahead_em.py  squarem_wrapper.py  standard_em.py  value_estimation.py
lookahead_em_evaluation/analysis/: cross_test_comparison.py
lookahead_em_evaluation/data/: __init__.py  generate_gmm.py  generate_hmm.py
lookahead_em_evaluation/models/: __init__.py  gmm.py  hmm.py  mixture_of_experts.py
lookahead_em_evaluation/tests/: __init__.py  analyze_test_1.py  analyze_test_2.py  analyze_test_3.py  analyze_test_4.py  test_1_high_d_gmm.py  test_2_hmm.py  test_3_moe.py  test_4_robustness.py  test_5_stress.py  test_moe_comprehensive.py  test_runner.py
lookahead_em_evaluation/utils/: __init__.py  logging_utils.py  metrics.py  plotting.py  timing.py
results/: moe_comprehensive_20251217_234633.json  moe_comprehensive_20251217_234633_tables.tex
tests/: analyze_moe_comprehensive.py  analyze_test_1.py  analyze_test_2.py  analyze_test_3.py  analyze_test_4.py  test_1_high_d_gmm.py  test_2_hmm.py  test_3_moe.py  test_4_robustness.py  test_5_stress.py  test_algorithms.py  test_moe_comprehensive.py  test_runner.py  test_utils.py
