[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookahead-em"
version = "1.0.0"
description = "Lookahead EM algorithm with value function acceleration for mixture models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MaryLena Bleile"}
]
keywords = ["em-algorithm", "mixture-models", "machine-learning", "optimization", "mixture-of-experts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
    "pandas>=1.3",
    "psutil>=5.8",
    "tqdm>=4.62",
    "joblib>=1.1",
]

[project.optional-dependencies]
r = ["rpy2>=3.4"]  # For SQUAREM via R's turboEM
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/MLenaBleile/em_lookahead_algorithm"
Repository = "https://github.com/MLenaBleile/em_lookahead_algorithm"
Documentation = "https://github.com/MLenaBleile/em_lookahead_algorithm#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["lookahead_em_evaluation*"]

[tool.pytest.ini_options]
testpaths = ["lookahead_em_evaluation/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"
